Added resizing functionality to the grid

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 
 <body>
     <h1 class="title">Etch A Sketch</h1>
+    <input id="colorPicker" type="color" value="#333333" />
   <div class="wrapper">
     <div class="grid-container"> </div>
-  <div class="slidecontainer">
+  <div class="slideContainer">
     <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
     <p>Value: <span id="sliderValue"></span></p>
   </div>
