Added color modes to grid and new user controls

--- a/index.html
+++ b/index.html
@@ -11,15 +11,20 @@
 </head>
 
 <body>
-    <h1 class="title">Etch A Sketch</h1>
-    <input id="colorPicker" type="color" value="#333333" />
+  <h1 class="title">Etch A Sketch</h1>
   <div class="wrapper">
-    <div class="grid-container"> </div>
-  <div class="slideContainer">
-    <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
-    <p>Value: <span id="sliderValue"></span></p>
-  </div>
+    <div class="userControls">
+      <div class="slideContainer">
+        <input type="range" min="1" max="100" value="15" class="slider" id="myRange">
+        <p>Value: <span id="sliderValue"></span></p>
+      </div>
+      <input id="colorPicker" type="color" value="#333333" />
+      <button id="rainbowBtn">Rainbow Mode</button>
       <button id="resetBtn">Reset</button>
+    </div>
+    <div class="gridWrapper">
+      <div class="grid-container"> </div>
+    </div>
   </div>
 
 </body>
