Changed the drawing functionality from hover to click and drag to draw

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       </div>
       <input id="colorPicker" type="color" value="#333333" />
       <button id="rainbowBtn">Rainbow Mode</button>
+      <button id="eraserBtn">Eraser</button>
       <button id="resetBtn">Reset</button>
     </div>
     <div class="gridWrapper">
