Fixed a bug with eraser mode

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
         <p>Value: <span id="sliderValue"></span></p>
       </div>
       <input id="colorPicker" type="color" value="#333333" />
+      <button id="colorBtn">Color Mode</button>
       <button id="rainbowBtn">Rainbow Mode</button>
-      <button id="eraserBtn">Eraser</button>
+      <button id="eraserBtn">Eraser Mode</button>
       <button id="resetBtn">Reset</button>
     </div>
     <div class="gridWrapper">
