Added visual styling and refactored code to be more efficient

--- a/index.html
+++ b/index.html
@@ -19,16 +19,15 @@
         <p>Value: <span id="sliderValue"></span></p>
       </div>
       <input id="colorPicker" type="color" value="#333333" />
-      <button id="colorBtn">Color Mode</button>
-      <button id="rainbowBtn">Rainbow Mode</button>
-      <button id="eraserBtn">Eraser Mode</button>
-      <button id="resetBtn">Reset</button>
+      <button class="colorBtn">Color Mode</button>
+      <button class="rainbowBtn">Rainbow Mode</button>
+      <button class="eraserBtn">Eraser Mode</button>
+      <button class="resetBtn">Reset</button>
     </div>
     <div class="gridWrapper">
       <div class="grid-container"> </div>
     </div>
   </div>
-
 </body>
 
 </html>
